app/assets/stylesheets/hero.scss
// Place all the styles related to the hero controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

// html, body, div, span, applet, object, iframe,
// h1, h2, h3, h4, h5, h6, p, blockquote, pre,
// a, abbr, acronym, address, big, cite, code,
// del, dfn, em, img, ins, kbd, q, s, samp,
// small, strike, strong, sub, sup, tt, var,
// b, u, i, center,
// dl, dt, dd, ol, ul, li,
// fieldset, form, label, legend,
// table, caption, tbody, tfoot, thead, tr, th, td,
// article, aside, canvas, details, embed, 
// figure, figcaption, footer, header, hgroup, 
// menu, nav, output, ruby, section, summary,
// time, mark, audio, video {
// 	margin: 0;
// 	padding: 0;
// 	border: 0;
// 	font-size: 100%;
// 	font: inherit;
// 	vertical-align: baseline;
// }
// /* HTML5 display-role reset for older browsers */
// article, aside, details, figcaption, figure, 
// footer, header, hgroup, menu, nav, section {
// 	display: block;
// }
// body {
// 	line-height: 1;
// }
// ol, ul {
// 	list-style: none;
// }
// blockquote, q {
// 	quotes: none;
// }
// blockquote:before, blockquote:after,
// q:before, q:after {
// 	content: '';
// 	content: none;
// }
// table {
// 	border-collapse: collapse;
// 	border-spacing: 0;
// }

.return-home{
    display: flex;
    align-items: left;
}

.return-home img{
    width: 150px;
    margin: 0;
}

button.buttons{
    cursor: pointer;
    background-image: radial-gradient(circle farthest-side,#3367d6,#3367d6 80%,rgba(51,103,214,0) 100%);
    background: #cacbce;
    color: #fff;
    border: none;
    border-radius: 3px;
    min-width: 5rem;
    max-width: 10rem;
    min-height: 45px;
    max-height: 5rem;
    line-height: 20px;
    font-weight: 500px;
    font-size: 18px;
    line-height: 20px;
    font-family: 'Teko', sans-serif;
    text-decoration: none;
    margin: 0.5rem;
}

button.buttons a {
    text-decoration: none;
}

.buttons:hover {
    background: #818181;
    box-shadow: 0 1px 2px #d3d3d392;
}

.align-button {
    flex-direction: row;
    margin-left: 9rem;
}


body{
    background: url(https://static.playoverwatch.com/img/crystal-candy-bg-top-e64823cff8.jpg) 
    no-repeat top,url(https://static.playoverwatch.com/img/crystal-candy-bg-bottom-00cdaf6844.jpg) no-repeat bottom;
}
.hero-background{
    background-size: cover;
    display: flex;
    flex-direction: column;
}
.profile {
    background-image: url(https://static.playoverwatch.com/img/crystal-candy-bg-top-e64823cff8.jpg), url(https://static.playoverwatch.com/img/crystal-candy-bg-bottom-00cdaf6844.jpg);
    background-position-x: center, center;
    background-position-y: top, bottom;
    background-size: initial, initial;
    background-repeat: no-repeat, no-repeat;
    background-attachment: initial, initial;
    background-origin: initial, initial;
    background-clip: initial, initial;
    background-color: #f6e9f0;
    width: 10%;
}


.info-border {
    color: #e4dede;
    font-family: 'Abel', sans-serif;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    border-style: groove;
    width: 21%;
    border: 0.2rem solid #77747455;
    background: #0000ff0a;
    margin: 1rem;
    padding: 1rem;
}


.hero-name{
    font-family: 'Teko', sans-serif;
    font-size: 2rem;
    color: #9c8080;
    letter-spacing: 0.1rem;
}

.hero-name h1{
    margin: 0;
}

.hero-role{
    margin: 0;
    font-size: 1.5rem;
    color: #00c3ff;
    letter-spacing: 0.07rem;
}

.hero-type{
    color: #f6f6f6;
    display: inline-block;
    vertical-align: text-top;
    line-height: .75;
    margin: 0;
    font-size: 2.6rem;
    letter-spacing: 0.07rem;
}

.difficulty-block h4{
    font-size: 1.5rem;
    color: #00c3ff;
    margin-bottom: 0;
    letter-spacing: 0.07rem;
}

.bio p{
    font-size: 1.5rem;
    color: #00c3ff;
    margin: 0;
}

.bio .inner-bio{
    color: #f6f6f6;
    font-size: 1rem;
    margin: 0, 0, 0.7rem;
}

